DOC: update release notes

--- a/AI/releases/v0.8.31.md
+++ b/AI/releases/v0.8.31.md
@@ -1,8 +1,43 @@
 # TestMe v0.8.31 Release Notes
 
-Released: 2025-11-27
+Released: 2025-12-03
 
 ## Enhancements
+
+### Test Class Environment Variable (--class)
+
+Added `--class <STRING>` CLI argument to set the `TESTME_CLASS` environment variable for tests.
+
+**Features:**
+
+-   Sets `TESTME_CLASS` environment variable for all test types
+-   Available in service scripts (prep, setup, cleanup, etc.)
+-   Included in Xcode project configurations for `--debug` mode
+-   Useful for test filtering and class identification at runtime
+
+**Usage Examples:**
+
+```bash
+tm --class "unit" "*.tst.c"           # Set class to "unit"
+tm --class "integration" test/api     # Set class to "integration"
+tm --class "smoke" --debug math       # Class available in Xcode debugging
+```
+
+**Use Cases:**
+
+-   Filter test behavior based on class (e.g., smoke vs full tests)
+-   Identify test class at runtime for conditional logic
+-   CI/CD pipelines that run different test classes
+-   Test frameworks that organize tests by class
+
+**Implementation Files:**
+
+-   [src/cli.ts](src/cli.ts) - CLI argument parsing
+-   [src/types.ts](src/types.ts) - Type definitions
+-   [src/handlers/base.ts](src/handlers/base.ts) - Test environment export
+-   [src/services.ts](src/services.ts) - Service script environment
+-   [src/artifacts.ts](src/artifacts.ts) - Xcode project configuration
+-   [doc/tm.1](doc/tm.1) - Man page documentation
 
 ### Windows Performance Optimizations
 
@@ -10,18 +45,18 @@ Comprehensive performance optimizations that dramatically improve test execution
 
 **Key Improvements:**
 
-| Optimization | Impact |
-|-------------|--------|
-| C binary caching (mtime comparison) | 70-90% faster repeated runs |
-| `--rebuild` / `-R` flag | Force recompilation when needed |
-| Keep artifacts by default | Enables binary caching |
-| Cache shell paths (Git Bash, PowerShell, Unix) | Eliminates subprocess spawns |
-| Cache compiler detection | Eliminates repeated detection |
-| Cache config file lookups | Eliminates directory walks |
-| Replace `tasklist` with `process.kill(pid, 0)` | Zero-overhead process checks |
-| Cache `findInPath` results | Eliminates where/which calls |
-| Use `readdir({ withFileTypes: true })` | 50-70% fewer stat() calls |
-| Reduce file deletion retry params | 13s → 1.5s worst-case cleanup |
+| Optimization                                   | Impact                          |
+| ---------------------------------------------- | ------------------------------- |
+| C binary caching (mtime comparison)            | 70-90% faster repeated runs     |
+| `--rebuild` / `-R` flag                        | Force recompilation when needed |
+| Keep artifacts by default                      | Enables binary caching          |
+| Cache shell paths (Git Bash, PowerShell, Unix) | Eliminates subprocess spawns    |
+| Cache compiler detection                       | Eliminates repeated detection   |
+| Cache config file lookups                      | Eliminates directory walks      |
+| Replace `tasklist` with `process.kill(pid, 0)` | Zero-overhead process checks    |
+| Cache `findInPath` results                     | Eliminates where/which calls    |
+| Use `readdir({ withFileTypes: true })`         | 50-70% fewer stat() calls       |
+| Reduce file deletion retry params              | 13s → 1.5s worst-case cleanup   |
 
 **New CLI Flag:**
 
@@ -39,14 +74,14 @@ tm --rebuild                 # Same as -R
 
 **Implementation Files:**
 
-- [src/handlers/c.ts](src/handlers/c.ts) - Binary caching with `needsRecompilation()`
-- [src/platform/process.ts](src/platform/process.ts) - Zero-overhead process checking
-- [src/platform/shell.ts](src/platform/shell.ts) - Shell path caching
-- [src/platform/compiler.ts](src/platform/compiler.ts) - Compiler detection caching
-- [src/platform/detector.ts](src/platform/detector.ts) - findInPath caching
-- [src/config.ts](src/config.ts) - Config file caching
-- [src/discovery.ts](src/discovery.ts) - Dirent-based directory traversal
-- [src/artifacts.ts](src/artifacts.ts) - Optimized cleanup with reduced retries
+-   [src/handlers/c.ts](src/handlers/c.ts) - Binary caching with `needsRecompilation()`
+-   [src/platform/process.ts](src/platform/process.ts) - Zero-overhead process checking
+-   [src/platform/shell.ts](src/platform/shell.ts) - Shell path caching
+-   [src/platform/compiler.ts](src/platform/compiler.ts) - Compiler detection caching
+-   [src/platform/detector.ts](src/platform/detector.ts) - findInPath caching
+-   [src/config.ts](src/config.ts) - Config file caching
+-   [src/discovery.ts](src/discovery.ts) - Dirent-based directory traversal
+-   [src/artifacts.ts](src/artifacts.ts) - Optimized cleanup with reduced retries
 
 ### Compiler Warning Display Option
 
@@ -54,10 +89,10 @@ Added `--warning` (`-w`) CLI flag to display compiler warnings and the compile c
 
 **Features:**
 
-- Shows compiler name and type (e.g., `/usr/bin/gcc (gcc)`)
-- Shows full compile command line with all flags and libraries
-- Shows compiler warnings (stderr) from successful compilations
-- Provides focused output without full configuration dump
+-   Shows compiler name and type (e.g., `/usr/bin/gcc (gcc)`)
+-   Shows full compile command line with all flags and libraries
+-   Shows compiler warnings (stderr) from successful compilations
+-   Provides focused output without full configuration dump
 
 **Usage Examples:**
 
@@ -76,26 +111,26 @@ tm -w -v test.tst.c          # Combine with verbose for full output
 
 **Comparison with `-s` (show):**
 
-| Flag | Config | Compile Command | Environment | Warnings |
-|------|--------|-----------------|-------------|----------|
-| `-w` | No | Yes | No | Yes |
-| `-s` | Yes | Yes | Yes | No |
-| `-s -v` | Yes | Yes | Yes | Yes |
+| Flag    | Config | Compile Command | Environment | Warnings |
+| ------- | ------ | --------------- | ----------- | -------- |
+| `-w`    | No     | Yes             | No          | Yes      |
+| `-s`    | Yes    | Yes             | Yes         | No       |
+| `-s -v` | Yes    | Yes             | Yes         | Yes      |
 
 **Implementation:**
 
-- CLI flag parsing in [src/cli.ts:143-147](src/cli.ts#L143-L147)
-- Type definition `warning` in [src/types.ts:244](src/types.ts#L244)
-- Type definition `showWarnings` in [src/types.ts:127](src/types.ts#L127)
-- Config application in [src/index.ts:766-774](src/index.ts#L766-L774)
-- Handler logic in [src/handlers/c.ts:255-294](src/handlers/c.ts#L255-L294)
+-   CLI flag parsing in [src/cli.ts:143-147](src/cli.ts#L143-L147)
+-   Type definition `warning` in [src/types.ts:244](src/types.ts#L244)
+-   Type definition `showWarnings` in [src/types.ts:127](src/types.ts#L127)
+-   Config application in [src/index.ts:766-774](src/index.ts#L766-L774)
+-   Handler logic in [src/handlers/c.ts:255-294](src/handlers/c.ts#L255-L294)
 
 **Use Cases:**
 
-- Quickly identify compiler warnings without verbose output
-- Debug compilation issues by seeing exact command line
-- CI/CD pipelines that need to capture warnings
-- Development workflow for cleaning up warnings
+-   Quickly identify compiler warnings without verbose output
+-   Debug compilation issues by seeing exact command line
+-   CI/CD pipelines that need to capture warnings
+-   Development workflow for cleaning up warnings
 
 ## Breaking Changes
 
@@ -115,9 +150,9 @@ tm -W 8 "*.tst.c"            # 8 parallel workers (capital W)
 
 **Rationale:**
 
-- `-w` is commonly associated with warnings in compiler tools (e.g., `gcc -w`)
-- Capital `-W` is still mnemonic for "Workers"
-- The `--workers` long form remains unchanged
+-   `-w` is commonly associated with warnings in compiler tools (e.g., `gcc -w`)
+-   Capital `-W` is still mnemonic for "Workers"
+-   The `--workers` long form remains unchanged
 
 ## Bug Fixes
 
@@ -145,7 +180,7 @@ const response = await fetch(config.url, {
 
 **Implementation:**
 
-- Header addition in [src/services/health-check.ts:118-120](src/services/health-check.ts#L118-L120)
+-   Header addition in [src/services/health-check.ts:118-120](src/services/health-check.ts#L118-L120)
 
 **Impact:** Improved reliability of health checks during service startup, especially for long-running polling scenarios.
 
@@ -168,8 +203,8 @@ Fixed platform-specific exclude patterns in subdirectory testme.json5 configs no
 
 **Implementation:**
 
-- Path normalization in [src/discovery.ts:199-210](src/discovery.ts#L199-L210)
-- Config exclude filtering in [src/index.ts:678-683](src/index.ts#L678-L683)
+-   Path normalization in [src/discovery.ts:199-210](src/discovery.ts#L199-L210)
+-   Config exclude filtering in [src/index.ts:678-683](src/index.ts#L678-L683)
 
 **Impact:** Subdirectory testme.json5 configs now properly apply platform-specific exclude patterns. Tests excluded by config patterns (e.g., Unix-only tests on Windows) are filtered out during grouping without requiring a root-level config.
 
